# sdk-generator

./: .gitignore  ADDING_NEW_API_VERSION.md  ADDING_VEXA_API.md  API-REFERENCE-V1.md  API-REFERENCE-V2.md  BUG_ANALYSIS_TYPE_SAFETY.md  BUILD_COMMANDS.md  CHANGELOG.md  DEVELOPMENT.md  DOCUMENTATION.md  MIGRATION.md  OPENAPI_SPECS.md  ORVAL_KNOWN_ISSUES.md  PROVIDER_INTEGRATION_PLAN.md  README.md  SETUP-AUTOMATION.md  VOICE_ROUTER_PLAN.md  WORKFLOW.md  biome.json  flake.nix  orval.config.ts  package.json  pnpm-lock.yaml  providers.csv  tsconfig.typedoc.json  tsup.config.ts  typedoc.assemblyai.config.mjs  typedoc.azure.config.mjs  typedoc.config.mjs  typedoc.deepgram.config.mjs  typedoc.elevenlabs.config.mjs  typedoc.gladia.config.mjs  typedoc.openai.config.mjs  typedoc.router.config.mjs  typedoc.soniox.config.mjs  typedoc.speechmatics.config.mjs  typedoc.v1.config.mjs  typedoc.v2.config.mjs  typedoc.webhooks.config.mjs  vitest.config.ts
docs/: ARCHITECTURE.md  DEVELOPMENT.md  FIELD_EQUIVALENCES.md  GLADIA_SPEC_DISCREPANCIES.md  HOW_DOCUMENTATION_WORKS.md  NORMALIZED_RESULTS.md  PROVIDER_SHORTFALLS.md  SDK_GENERATION_WORKFLOW.md  STREAMING.md  sdk-generation-pipeline.mmd
examples/: baas-client-usage.ts  streaming-client.ts
open-api/: openapi-spec.json
rust-sdk/: .gitignore  Cargo.toml  build.rs
rust-sdk/src/: audio_encoding.rs  constants.rs  errors.rs  lib.rs  router.rs
rust-sdk/src/adapters/: assemblyai.rs  deepgram.rs  gladia.rs  mod.rs  streaming.rs
rust-sdk/src/types/: mod.rs
rust-sdk/src/webhooks/: gladia.rs  mod.rs  types.rs
scripts/: check-deepgram-duplicates.js  check-openapi-changes.js  check-provider-updates.js  deepgram-spec-transformer.js  fix-assemblyai-missing-schemas.js  (+31 more)
(+617 files in other folders)
